crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_media_and_encoding_draft7.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"contentEncoding\":\"base64\",\"contentMediaType\":\"application/json\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => {
                match __content::from_base64(s) {
                    Ok(Some(__decoded)) => __content::is_json(&__decoded),
                    _ => false,
                }
            }
            _ => false,
        }
