crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_media_type_only.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"contentMediaType\":\"application/json\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => __content::is_json(s),
            _ => false,
        }
