crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__duplicate_regex_literals_deduplicated.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":false,\"patternProperties\":{\"^[a-z]{2,}$\":{\"type\":\"string\"}},\"propertyNames\":{\"pattern\":\"^[a-z]{2,}$\"},\"type\":\"object\"}"
expression: code
---
struct Validator;
#[doc(hidden)]
#[allow(
    non_snake_case,
    dead_code,
    unused_imports,
    unused_variables,
    unreachable_code,
    clippy::all
)]
mod __validator_impl {
    use super::*;
    use jsonschema::__private::cmp as __cmp;
    use jsonschema::__private::content as __content;
    use jsonschema::__private::custom as __custom;
    use jsonschema::__private::error as __err;
    use jsonschema::__private::fancy_regex as __fancy;
    use jsonschema::__private::format as __fmt;
    use jsonschema::__private::numeric as __num;
    use jsonschema::__private::regex as __re;
    use jsonschema::__private::serde_json as __sj;
    use jsonschema::__private::types as __types;
    use jsonschema::__private::unique_items as __uniq;
    use jsonschema::__private::unfinished_matches as __unfinished;
    use jsonschema::paths as __paths;
    use jsonschema::JsonType as __JT;
    use jsonschema::JsonTypeSet as __JTS;
    use jsonschema::ErrorIterator as __EI;
    use jsonschema::ValidationError as __VE;
    use __sj::Value as __Value;
    use std::sync::LazyLock as __Lazy;
    type __Map = __sj::Map<String, __Value>;
    #[inline]
    fn __jsonschema_regex_0(
        subject: &str,
        site: impl FnOnce() -> __unfinished::Site,
    ) -> bool {
        static REGEX: __Lazy<Option<__fancy::Regex>> = __Lazy::new(|| {
            let mut builder = __fancy::RegexBuilder::new("^[a-z]{2,}$");
            builder.build().ok()
        });
        REGEX
            .as_ref()
            .is_some_and(|re| { __unfinished::fancy_is_match(re, subject, site) })
    }
    pub(super) fn is_valid(instance: &__Value) -> bool {
        match instance {
            __Value::Object(obj) => {
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        let mut covered = false;
                        if {
                            __jsonschema_regex_0(
                                key.as_str(),
                                || __unfinished::schema_site(
                                    "/patternProperties/^[a-z]{2,}$",
                                    None,
                                ),
                            )
                        } {
                            if !(instance.is_string()) {
                                return false;
                            }
                            covered = true;
                        }
                        if !covered {
                            return false;
                        }
                        true
                    });
                __object_pass
            }
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: &'__i __Value,
        __path: &__paths::LazyLocation,
    ) -> Option<__VE<'__i>> {
        match instance {
            __Value::Object(obj) => {
                for (key, value) in obj.iter() {
                    let key_str = key.as_str();
                    let mut covered = false;
                    if {
                        __jsonschema_regex_0(
                            key.as_str(),
                            || __unfinished::located_site(
                                "/patternProperties/^[a-z]{2,}$",
                                None,
                                __path,
                            ),
                        )
                    } {
                        let instance = value;
                        let __path = &__path.push(key_str);
                        if !(instance.is_string()) {
                            return Some(
                                __err::single_type(
                                    "/patternProperties/^[a-z]{2,}$/type",
                                    __path.into(),
                                    instance,
                                    __JT::String,
                                ),
                            );
                        }
                        covered = true;
                    }
                    if !covered {
                        return Some(
                            __err::additional_properties(
                                "/additionalProperties",
                                __path.into(),
                                instance,
                                vec![key.clone()],
                            ),
                        );
                    }
                }
            }
            _ => {
                return Some(
                    __err::single_type("/type", __path.into(), instance, __JT::Object),
                );
            }
        }
        None
    }
    pub(super) fn collect_errors<'__i>(
        instance: &'__i __Value,
        __path: &__paths::LazyLocation,
        __errors: &mut Vec<__VE<'__i>>,
    ) {
        match instance {
            __Value::Object(obj) => {
                let mut __unexpected: Vec<String> = Vec::new();
                for (key, value) in obj.iter() {
                    let key_str = key.as_str();
                    let mut covered = false;
                    if {
                        __jsonschema_regex_0(
                            key.as_str(),
                            || __unfinished::located_site(
                                "/patternProperties/^[a-z]{2,}$",
                                None,
                                __path,
                            ),
                        )
                    } {
                        let instance = value;
                        let __path = &__path.push(key_str);
                        if !(instance.is_string()) {
                            __errors
                                .push(
                                    __err::single_type(
                                        "/patternProperties/^[a-z]{2,}$/type",
                                        __path.into(),
                                        instance,
                                        __JT::String,
                                    ),
                                );
                        }
                        covered = true;
                    }
                    if !covered {
                        __unexpected.push(key.clone());
                    }
                }
                if !__unexpected.is_empty() {
                    __errors
                        .push(
                            __err::additional_properties(
                                "/additionalProperties",
                                __path.into(),
                                instance,
                                __unexpected,
                            ),
                        );
                }
            }
            _ => {
                __errors
                    .push(
                        __err::single_type(
                            "/type",
                            __path.into(),
                            instance,
                            __JT::Object,
                        ),
                    );
            }
        }
    }
    pub(super) fn run_is_valid(instance: &__Value) -> bool {
        __unfinished::is_valid(|| is_valid(instance))
    }
    pub(super) fn run_validate<'__i>(instance: &'__i __Value) -> Option<__VE<'__i>> {
        __unfinished::validate(
            || ::core::convert::Into::into(instance),
            || validate(instance, &__paths::LazyLocation::new()),
            || {
                let mut errors = Vec::new();
                collect_errors(instance, &__paths::LazyLocation::new(), &mut errors);
                errors
            },
        )
    }
    pub(super) fn run_collect_errors<'__i>(instance: &'__i __Value) -> Vec<__VE<'__i>> {
        __unfinished::collect_errors(
            || ::core::convert::Into::into(instance),
            || {
                let mut errors = Vec::new();
                collect_errors(instance, &__paths::LazyLocation::new(), &mut errors);
                errors
            },
        )
    }
    pub(super) fn entry_is_valid(instance: &__Value) -> bool {
        run_is_valid(instance)
    }
    pub(super) fn entry_validate<'__i>(
        instance: &'__i __Value,
    ) -> ::std::result::Result<(), __VE<'__i>> {
        match run_validate(instance) {
            Some(e) => Err(e),
            None => Ok(()),
        }
    }
    pub(super) fn entry_iter_errors<'__i>(instance: &'__i __Value) -> __EI<'__i> {
        __err::iterator_from(run_collect_errors(instance))
    }
}
impl Validator {
    pub fn is_valid(instance: &jsonschema::__private::serde_json::Value) -> bool {
        __validator_impl::entry_is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i jsonschema::__private::serde_json::Value,
    ) -> ::std::result::Result<(), jsonschema::ValidationError<'__i>> {
        __validator_impl::entry_validate(instance)
    }
    pub fn iter_errors<'__i>(
        instance: &'__i jsonschema::__private::serde_json::Value,
    ) -> jsonschema::ErrorIterator<'__i> {
        __validator_impl::entry_iter_errors(instance)
    }
}
