crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__empty_dependencies.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"dependencies\":{},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => true,
            _ => false,
        }
