crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__empty_dependent_schemas.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"https://json-schema.org/draft/2019-09/schema\",\"dependentSchemas\":{},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => true,
            _ => false,
        }
