crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__empty_prefix_items.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"prefixItems\":[],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => true,
            _ => false,
        }
