crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__empty_schema.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{}"
expression: is_valid_body(schema)
---
true
